Finalizacion de proyecto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,13 +12,13 @@ spring.datasource.password=123
 # Configuración de JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #Muestra pr la consola como se desarrollan las consultas SQL
 spring.jpa.show-sql = true
 
 # puerto de ejecución, donde escucha el server embebido
-server.port=8080
+server.port=2524
 
 # https://clasefake.onrender.com/swagger-ui/index.html  Así lo llamén en Render
 # http://localhost:8080/swagger-ui/index.html  ASI HAY QUE LLAMARLO Localmente
