Finalizacion de proyecto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.application.name=AnalisisADN
 #Habilitar la consola de H2
 spring.h2.console.enabled=true
 #Parámetros para conectarnos a una base de  datos
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test;
+spring.datasource.url=spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=123
+spring.datasource.password=
 
 # Configuración de JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
