--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,21 @@
 spring.application.name=AnalisisADN
 
-#Configuración de la base de datos H2
-#Habilitar la consola de H2
-spring.h2.console.enabled=true
-#Parámetros para conectarnos a una base de  datos
-spring.datasource.url=spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
+# Parámetros para conectarnos a una base de datos PostgreSQL
+spring.datasource.url=jdbc:postgresql:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driverClassName=org.postgresql.Driver
 
 # Configuración de JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 
-#Muestra pr la consola como se desarrollan las consultas SQL
-spring.jpa.show-sql = true
-
-# puerto de ejecución, donde escucha el server embebido
+# Puerto de ejecución, donde escucha el server embebido
 server.port=8080
 
-# https://clasefake.onrender.com/swagger-ui/index.html  Así lo llamén en Render
-# http://localhost:8080/swagger-ui/index.html  ASI HAY QUE LLAMARLO Localmente
+# Configuración de Swagger
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
-
-# LEVANTAR H2 con este comando
-# http://localhost:8080/h2-console/
-
-
-#https://restinicial.onrender.com/h2-console/
