--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,41 @@
 spring.application.name=AnalisisADN
+#Configuración de la base de datos H2
+#Habilitar la consola de H2
+spring.h2.console.enabled=true
+#Parámetros para conectarnos a una base de  datos
 
-# Parámetros para conectarnos a una base de datos PostgreSQL
-spring.datasource.url=jdbc:postgresql:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driverClassName=org.postgresql.Driver
+
 
 # Configuración de JPA
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# EL update le dice que si no existe n las tablas que las cree y luego actualice
+
 spring.jpa.hibernate.ddl-auto=create-drop
+#si coloco drop va a eliminar todas las tablas que tenia
+
+
+#Muestra pr la consola como se desarrollan las consultas SQL
 spring.jpa.show-sql=true
 
-# Puerto de ejecución, donde escucha el server embebido
-server.port=8080
+# puerto de ejecución, donde escucha el server embebido
+server.port=2524
 
-# Configuración de Swagger
+
+# OPEN API
+
+# https://clasefake.onrender.com/swagger-ui/index.html  Así lo llamén en Render
+# http://localhost:8080/swagger-ui/index.html  ASI HAY QUE LLAMARLO Localmente
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
+
+# LEVANTAR H2 con este comando
+# http://localhost:8080/h2-console/
+
+
+#https://restinicial.onrender.com/h2-console/
